修复yaml配置并且加入ignore